globus-gridftp-server (7.22-1+gt6.@distro@) @distro@; urgency=low

  * windows fix

 -- Globus Toolkit <support@globus.org>  Fri, 06 Mar 2015 20:31:22 -0600

globus-gridftp-server (7.21-1+gt6.@distro@) @distro@; urgency=low

  * GT-586: Restrict sharing based on username or group membership
  * GT-552: don't enable udt without threads
  * GT-585: Environrment and threading config not loaded from config dir
  * Ignore config.d files with a '.' in name
  * always install udt driver

 -- Globus Toolkit <support@globus.org>  Fri, 06 Mar 2015 18:48:32 -0600

globus-gridftp-server (7.20-1+gt6.@distro@) @distro@; urgency=low

  * Fix autoreconf error on some setups

 -- Globus Toolkit <support@globus.org>  Tue, 06 Jan 2015 15:19:47 -0500

globus-gridftp-server (7.19-1+gt6.@distro@) @distro@; urgency=low

  * Fix -help long line formatting

 -- Globus Toolkit <support@globus.org>  Tue, 23 Dec 2014 14:20:28 -0500

globus-gridftp-server (7.18-1+gt6.@distro@) @distro@; urgency=low

  * GT-575: Add support for the network manager driver.

 -- Globus Toolkit <support@globus.org>  Mon, 22 Dec 2014 05:25:19 -0600

globus-gridftp-server (7.17-1+gt6.@distro@) @distro@; urgency=low

  * Fix share file creation errors on bad fuse filesystems.

 -- Globus Toolkit <support@globus.org>  Fri, 05 Dec 2014 14:40:20 -0600

globus-gridftp-server (7.16-1+gt6.@distro@) @distro@; urgency=low

  * don't attempt to get retransmit count on http transfer

 -- Globus Toolkit <support@globus.org>  Sun, 16 Nov 2014 14:43:44 -0600

globus-gridftp-server (7.15-1+gt6.@distro@) @distro@; urgency=low

  * Remove reference to Globus::Core::Paths

 -- Globus Toolkit <support@globus.org>  Mon, 10 Nov 2014 16:15:13 -0500

globus-gridftp-server (7.14-1+gt6.@distro@) @distro@; urgency=low

  * Fix logging of IPv6 address

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:55:55 -0500

globus-gridftp-server (7.13-1+gt6.@distro@) @distro@; urgency=low
