@@ -1,3 +1,10 @@
+globus-gridftp-server (7.23-1+gt6.@distro@) @distro@; urgency=low
+
+  * fix threads commandline arg processing
+  * prevent parse error on pre-init envs from raising assertion
+
+ -- Globus Toolkit <support@globus.org>  Mon, 16 Mar 2015 17:50:10 -0500
+
 globus-gridftp-server (7.22-1+gt6.@distro@) @distro@; urgency=low
 
   * windows fix
